[package]
name = "ducc"
version = "0.0.1"
authors = ["Skyler Lipthay <sl@skylerlipthay.com>"]
repository = "https://github.com/SkylerLipthay/ducc"
license = "MIT"

[features]
default = ["timeout"]

# Enables the use of execution timeouts.
timeout = ["duktape-sys/use-exec-timeout-check"]

[dependencies]
cesu8 = "1.1"
serde = "1.0"
serde_derive = "1.0"

[dependencies.duktape-sys]
path = "duktape-sys"
