[package]
name = "ducc-serde"
version = "0.1.0"
description = "Serde serializer/deserializer implementation for `ducc::Value`"
authors = ["Skyler Lipthay <sl@skylerlipthay.com>"]
repository = "https://github.com/SkylerLipthay/ducc"
license = "MIT"

[dependencies]
serde = "1.0"

[dependencies.ducc]
version = "0.1"
path = "../ducc"
