[package]
name = "ducc"
version = "0.1.0"
description = "Rust bindings for Duktape, the embedded JavaScript engine"
authors = ["Skyler Lipthay <sl@skylerlipthay.com>"]
repository = "https://github.com/SkylerLipthay/ducc"
license = "MIT"

[dependencies]
cesu8 = "1.1"
serde = "1.0"
serde_derive = "1.0"

[dependencies.ducc-sys]
path = "../ducc-sys"
features = ["use-exec-timeout-check"]
