[package]
name = "ducc"
version = "0.1.2"
description = "Rust bindings for Duktape, the embedded JavaScript engine"
authors = ["Skyler Lipthay <sl@skylerlipthay.com>"]
repository = "https://github.com/SkylerLipthay/ducc"
license = "MIT"

[dependencies]
cesu8 = "1.1"

[dependencies.ducc-sys]
version = "0.1.2"
path = "../ducc-sys"
features = ["use-exec-timeout-check"]
